# dspy-building-blocks

./: Makefile  README.md  dspy-building-blocks.yml  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
dspy_building_blocks/: __init__.py  dataset.py  features.py  plots.py
dspy_building_blocks/modeling/: predict.py  train.py
notebooks/: 01-try-out-dspy.ipynb
